--- a/doc/href/h2.md
+++ b/doc/href/h2.md
@@ -1,17 +1,93 @@
-## 资料2
+## 技术背景
 
-### 前端兼容性
+#### 前端主流技术
 
-1.浏览器内核
-```
-IE:Trident
-Safari:WebKit
-Chrome:Chromium/WebKit
-Opera:Blink/WebKit
-Firefox:Gecko
-```
+* AngularJS
+    ```
+    AngularJS 是一个 JavaScript 框架。它可通过 <script> 标签添加到 HTML 页面。
+    AngularJS 通过 指令 扩展了 HTML，且通过 表达式 绑定数据到 HTML。
+    ```
+* Bootstrap
+    ```
+    组件、LESS 变量和jQuery 插件
+    ```
+* jQuery
+    ```
+    jQuery是一个轻量级的"写的少，做的多"的JavaScript库
+    ```
+* ES6
+    ```
+    ES6 是新版本JavaScript语言的标准
+    ```
+* Less、Scss
+    ```
+    Less、Scss是一种动态样式语言. 对CSS赋予了动态语言的特性，如变量，继承，运算， 函数。
+    ```
+* TypeScript
+    ```
+    TypeScript是JavaScript的一个超集，而且本质上向这个语言添加了可选的静态类型和基于类的面向对象编程（类型批注、声明文件）。
+    ```
+* React
+    ```
+    React主要用于构建UI，很多人认为 React 是 MVC 中的 V（视图）
+    1.声明式设计 −React采用声明范式，可以轻松描述应用。
+    2.高效 −React通过对DOM的模拟，最大限度地减少与DOM的交互。
+    3.灵活 −React可以与已知的库或框架很好地配合。
+    4.JSX − JSX 是 JavaScript 语法的扩展。React 开发不一定使用 JSX ，但我们建议使用它。
+    5.组件 − 通过 React 构建组件，使得代码更加容易得到复用，能够很好的应用在大项目的开发中。
+    6.单向响应的数据流 − React 实现了单向响应的数据流，从而减少了重复代码，这也是它为什么比传统数据绑定更简单
 
-2.JS引擎
-```
-Chrome:V8
-```
+    使用虚拟DOM的脚本库，比如React等
+
+    React里的各个Components表示View
+    Redux里的store里的state表示Model
+    Redux里的action和reducer表示Controller
+    ```
+*  ES6
+    ```
+    var test // 变量提升，函数最顶部
+    只要在{}花括号内的代码块即可以认为 let 和 const 的作用域 // TDZ(暂时性死区)
+    let 的作用域是在它所在当前代码块，但不会被提升到当前函数的最顶部
+    const 声明的变量必须提供一个值，而且会被认为是常量，
+    对象所指向的地址不能改变，而变量成员是可以修改的：
+     const student = { name: 'cc' }
+        // 没毛病
+        student.name = 'yy'
+        // 如果这样子就会报错了
+        student  = { name: 'yy' }
+
+     var body = request.body
+     var username = body.username
+     var password = body.password
+    const { body, body: { username, password } } = request
+    ```
+* Node.js
+    ```
+    Node.js 就是运行在服务端的 JavaScript。
+    Node.js 是一个基于Chrome JavaScript 运行时建立的一个平台。
+    Node.js是一个事件驱动I/O服务端JavaScript环境，基于Google的V8引擎，V8引擎执行Javascript的速度非常快，性能非常好。
+    ```
+* Express
+    ```
+    Express 是一个简洁而灵活的 node.js Web应用框架, 提供了一系列强大特性帮助你创建各种 Web 应用，和丰富的 HTTP 工具。
+    ```
+* Vue
+    ```
+    Vue 的目标是通过尽可能简单的 API 实现响应的数据绑定和组合的视图组件。
+    ```
+
+#### 前端兼容性
+
+* 浏览器内核
+    ```
+    IE:Trident
+    Safari:WebKit
+    Chrome:Chromium/WebKit
+    Opera:Blink/WebKit
+    Firefox:Gecko
+    ```
+
+* JS引擎
+    ```
+    Chrome:V8
+    ```
