--- a/doc/href/参考链接.md
+++ b/doc/href/参考链接.md
@@ -8,7 +8,7 @@
 
 ### 社区
 
-* [阮一峰的网络日志](http://www.ruanyifeng.com/blog/developer/)
+* [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
 * [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 * [前端大全](http://web.jobbole.com/)
 * [CSDN](https://blog.csdn.net/)
