--- a/doc/other/心迹.md
+++ b/doc/other/心迹.md
@@ -1,15 +1,20 @@
 ## 心迹
 
 
-* **公司**：有比较大的发展空间，能够在一个良好的环境中养成良好的习惯，安逸的环境会让人变得懒惰
-* **工作**：适应良好的工作流程，专注于技术的研究和能力的提升
-* **前端**：入门简单，人员泛滥，人才稀少
-* **程序员**：不做github的搬运工，要自己创造代码
+* **公司**：
+    * 有进步发展空间，在一个良好的工作环境中养成良好的工作习惯，
+    * 专注于技术的研究和能力的提升，安逸的环境会让人变得懒惰
+* **前端**：
+    * 入门简单，人员泛滥，人才稀少
+* **程序员**：
+    * 不做github的搬运工，要自己创造代码
+* **工作**：
+    * 必须完成的事会有压力，想要完成的事才有动力
 * **特点**：
     * 专注于自己认定的事，敢于做自己从未做过的事
     * 认真做简单的事，尝试做困难的事
     * 想奋斗是不服输，想安稳是输不起
-    * (喜欢和开朗活泼的人相处，喜欢和别人讨论问题，觉得一起解决问题是很开心的事)
+    * (喜欢和开朗活泼的人相处，喜欢和别人讨论问题，一起解决问题是很开心的事)
 
 ####摘录
 
@@ -29,4 +34,12 @@
 我们雇用新毕业的工程师时，会派给他们很多琐碎的工作，使他们饱和。
 他们会逐渐忘记大学里学到的课程，全部注意力都集中在手头的工作。
 很多人倾向于通过忙碌程度来评价自己，我相信这是一个死亡陷阱。
+```
+
+* **不是不热情，而是自卑和恐惧**
+```
+热情不是凭空产生的，它跟自主权有关。
+如果你在某个职位上的自主权越大，能够掌控的东西越多，就越容易对当前的职业产生热情。
+与其强调跟随内心的热情，不如强调如何在某种职业里面获得自主权。
+你必须使自己变得优秀，让别人无法忽视你，同意让你掌控更多的资源。
 ```
