--- a/doc/other/心迹.md
+++ b/doc/other/心迹.md
@@ -1,15 +1,14 @@
 ## 心迹
 
 
-* **公司**：
-    * 有进步发展空间，在一个良好的工作环境中养成良好的工作习惯，
-    * 专注于技术的研究和能力的提升，安逸的环境会让人变得懒惰
-* **前端**：
-    * 入门简单，人员泛滥，人才稀少
 * **程序员**：
     * 不做github的搬运工，要自己创造代码
 * **工作**：
     * 必须完成的事会有压力，想要完成的事才有动力
+    * 必须要保持对工作的热情，而不一定是把工作当做兴趣爱好
+* **公司**：
+    * 有进步发展空间，在一个良好的工作环境中养成良好的工作习惯
+    * 专注于技术的研究和能力的提升，与项目团队一起进步
 * **特点**：
     * 专注于自己认定的事，敢于做自己从未做过的事
     * 认真做简单的事，尝试做困难的事
@@ -42,4 +41,22 @@
 如果你在某个职位上的自主权越大，能够掌控的东西越多，就越容易对当前的职业产生热情。
 与其强调跟随内心的热情，不如强调如何在某种职业里面获得自主权。
 你必须使自己变得优秀，让别人无法忽视你，同意让你掌控更多的资源。
+```
+
+* **从热情到敬业**
+```
+由于练得太苦，生理和心理压力都非常大，很多专业选手对长跑早就失去热情，只是把它当作一份工作，然后敬业地对待它。
+```
+
+* **公司与人要兴趣相投**
+```
+公司跟人一样，也有自己的兴趣爱好。
+倘若硬要去做那些没兴趣的事情，不仅内心煎熬，而且投入大量时间和金钱之后，最终还是难逃认赔离场的结局。
+```
+
+####记录
+
+* **自己的价值由自己决定**
+```
+因为你认为自身的价值提升了，所以才会去接受更高级的考核。
 ```
