--- a/doc/note/参考链接.md
+++ b/doc/note/参考链接.md
@@ -11,14 +11,13 @@
 
 * [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
 * [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
-* [前端大全](http://web.jobbole.com/)
+* [伯乐在线](http://web.jobbole.com/)
 * [CSDN](https://blog.csdn.net/)
 * [掘金](https://juejin.im/)
 * [脚本之家](https://www.jb51.net/)
 * [博客园](https://www.cnblogs.com/)
 * [codereview](https://codereview.stackexchange.com/)
 * [stackoverflow](https://stackoverflow.com/)
-* [MDN](https://developer.mozilla.org/)
 * [segmentfault](https://segmentfault.com/)
 
 ### 技术
@@ -36,4 +35,6 @@
 * [fabricjs](http://fabricjs.com/)
 * [weex](https://weex.apache.org/cn/index.html)
 * [electron](https://electronjs.org/)
+* [WebRTC](https://webrtc.org/)
+* [highlightjs](https://highlightjs.org/)
 
