--- a/doc/other/心迹.md
+++ b/doc/other/心迹.md
@@ -45,11 +45,18 @@
 * **自己的价值由自己决定**
 ```
 因为你认为自身的价值提升了，所以才会去接受更高级的考核。
+一个真正有价值的程序员不仅需要自身工作能力强，还需要能帮助更多的人使他们增强工作能力。
 ```
+* **你们会不会花时间和精力去培养公司员工的自身技术和工作能力**
+* **对于过时代码或者临时应急的解决方案你们会不会有一些处理方案**
+* **你认为代码最重要的是容易被读懂还是使用最新或最优代码**
+* **你们会不会进行codereview**
+* **你会不会去看开发写的代码（[除了监控进度，还要管理质量](http://blog.jobbole.com/107390/)）**
 
 
 * **程序员**：
     * 不做github的搬运工，要自己创造代码
+    * 需要学习的是编程，而不是编程语言
 * **工作**：
     * 必须完成的事会有压力，想要完成的事才有动力
     * 必须要保持对工作的热情，而不一定是把工作当做兴趣爱好
@@ -61,3 +68,42 @@
     * 认真做简单的事，尝试做困难的事
     * 想奋斗是不服输，想安稳是输不起
     * (喜欢和开朗活泼的人相处，喜欢和别人讨论问题，一起解决问题是很开心的事)
+
+```
+开源项目经历。（一般指 github）
+对自己的项目比较了解
+有那么一两个很熟悉的技术，比如 canvas，node 都是加分项
+对常用的框架源码有一定的了解（使用自己开发的框架，而不是 api 的搬运工）
+有自己的博客（原型链，es6,源码解析，某某开源项目实践）
+/*
+【进阶 1 期】 调用堆栈
+【进阶 2 期】 作用域闭包
+【进阶 3 期】 this 全面解析
+【进阶 4 期】 深浅拷贝原理
+【进阶 5 期】 原型 Prototype
+【进阶 6 期】 高阶函数
+【进阶 7 期】 事件机制
+【进阶 8 期】 Event Loop 原理
+【进阶 9 期】 Promise 原理
+【进阶 10 期】Async/Await 原理
+【进阶 11 期】防抖/节流原理
+【进阶 12 期】模块化详解
+【进阶 13 期】ES6 重难点
+【进阶 14 期】计算机网络概述
+【进阶 15 期】浏览器渲染原理
+【进阶 16 期】webpack 配置
+【进阶 17 期】webpack 原理
+【进阶 18 期】前端监控
+【进阶 19 期】跨域和安全
+【进阶 20 期】性能优化
+【进阶 21 期】VirtualDom 原理
+【进阶 22 期】Diff 算法
+【进阶 23 期】MVVM 双向绑定
+【进阶 24 期】Vuex 原理
+【进阶 25 期】Redux 原理
+【进阶 26 期】路由原理
+【进阶 27 期】VueRouter 源码解析
+【进阶 28 期】ReactRouter 源码解析
+*/
+有一定的自驱力（学习的毅力，推动团队迭代，分享等）
+```
