--- a/doc/h5/h5基础.md
+++ b/doc/h5/h5基础.md
@@ -1,15 +1,14 @@
 ## h5基础
 
 
-[meta](#meta)、
+* [meta](#meta)
 
 
 #### meta
-
 ```js
 //禁止缩放
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-//全屏显示
+//全屏显示（不显示浏览器底部菜单）
 <meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
