--- a/doc/h5/h5技巧.md
+++ b/doc/h5/h5技巧.md
@@ -1,7 +1,8 @@
 ## h5技巧
 
-[小结](#小结)、
-[手机端横屏](#手机端横屏)、
+* [小结](#小结)
+* [手机端横屏](#手机端横屏)
+* [微信QQ授权](#微信QQ授权)
 
 
 #### 小结
@@ -18,6 +19,8 @@ document.addEventListener('touchmove',
 }
 , false);
 ```
+* QQ浏览器调用键盘时会触发window.onresize事件，其他浏览器不会
+* QQ内置浏览器不能自动执行window.open()事件
 
 #### 手机端横屏
 
@@ -51,6 +54,8 @@ if(width>height){
     doc.style.transform = `scale(1,1)`;
     doc.style.top = '0px';
     doc.style.left = '0px';
+    doc.style.width = "100%";
+    doc.style.height = "100%";
 }else{
     doc.style.width = height / width * width + "px";
     doc.style.height = width / height * height + "px";
@@ -60,19 +65,18 @@ if(width>height){
 }
 ```
 
-#### 输入框置顶
+#### 微信QQ授权
+* [微信开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html)
+* [微信开放平台](https://open.weixin.qq.com)
+* [微信公众平台-测试账号](https://mp.weixin.qq.com/debug/cgi-bin/sandboxinfo?action=showinfo&t=sandbox/index)
+* [微信授权-文档](https://mp.weixin.qq.com/wiki?t=resource/res_main&id=mp1421140842)
+* [原文](https://juejin.im/post/5b5c421a5188251ac97693d3)
+* [腾讯开放平台](http://open.qq.com/reg)
+* [QQ互联-文档](http://wiki.connect.qq.com)
+* [JS SDK演示](http://qzonestyle.gtimg.cn/qzone/openapi/js-sdk-demo.html)
+* [原文](https://www.jianshu.com/p/24fd4f8311e3)
 ```js
-//QQ浏览器调用键盘时会触发window.onresize事件，其他浏览器不会
-const input = document.getElementsByTagName("input")[0];
-let top = 0, elem=input.offsetParent;//top为输入框距离窗口顶部距离
-input.onfocus = () => {
-    top = item.offsetTop;
-    while(elem!=null){
-        top += elem.offsetTop;
-        elem=elem.offsetParent;
-    }
-};
-window.onresize = ()=>{
-    home.scrollTop = top;
-}
+前端不支持跨域，暴露appid和appkey给前端不安全
+[yahoo代理](https://www.cnblogs.com/jinzhenzong/p/9035809.html)
+后台实现：重定向请求后台get接口，decodeURIComponent解码昵称
 ```
