--- a/doc/note/参考链接.md
+++ b/doc/note/参考链接.md
@@ -12,18 +12,14 @@
 * [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
 * [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 * [伯乐在线](http://web.jobbole.com/)
-* [CSDN](https://blog.csdn.net/)
-* [掘金](https://juejin.im/)
-* [脚本之家](https://www.jb51.net/)
-* [博客园](https://www.cnblogs.com/)
+* [Google Developers](https://developers.google.com/)
 * [codereview](https://codereview.stackexchange.com/)
 * [stackoverflow](https://stackoverflow.com/)
 * [segmentfault](https://segmentfault.com/)
+* [每日时报](https://wubaiqing.github.io/zaobao/)
 
 ### 技术
 
-* [w3school](http://www.w3school.com.cn/)
-* [w3cschool](https://www.w3cschool.cn/)
 * [runoob](http://www.runoob.com/)
 * [MDN Web](https://developer.mozilla.org/zh-CN/docs/Web)
 * [es6](http://es6.ruanyifeng.com/)
@@ -37,4 +33,5 @@
 * [electron](https://electronjs.org/)
 * [WebRTC](https://webrtc.org/)
 * [highlightjs](https://highlightjs.org/)
+* [chimee](https://chimee.org/)
 
