--- a/doc/other/心迹.md
+++ b/doc/other/心迹.md
@@ -47,16 +47,17 @@
 因为你认为自身的价值提升了，所以才会去接受更高级的考核。
 一个真正有价值的程序员不仅需要自身工作能力强，还需要能帮助更多的人使他们增强工作能力。
 ```
-* **你们会不会花时间和精力去培养公司员工的自身技术和工作能力**
+* **会不会花时间和精力去培养公司员工的自身技术和工作能力**
 * **对于过时代码或者临时应急的解决方案你们会不会有一些处理方案**
-* **你认为代码最重要的是容易被读懂还是使用最新或最优代码**
-* **你们会不会进行codereview**
-* **你会不会去看开发写的代码（[除了监控进度，还要管理质量](http://blog.jobbole.com/107390/)）**
+* **认为代码最重要的是容易被读懂还是使用最新或最优代码**
+* **会不会进行code review**[Why review code?](https://mp.weixin.qq.com/s/5m3bBzFTN82ttEFN5EpBew)
+* **会不会去看开发写的代码（[除了监控进度，还要管理质量](http://blog.jobbole.com/107390/)）**
 
 
 * **程序员**：
-    * 不做github的搬运工，要自己创造代码
+    * 不做github的搬运工，要自己创造代码（使用自己开发的框架，而不是 api 的搬运工）
     * 需要学习的是编程，而不是编程语言
+    * 有一定的自驱力（学习的毅力，推动团队迭代，分享等）
 * **工作**：
     * 必须完成的事会有压力，想要完成的事才有动力
     * 必须要保持对工作的热情，而不一定是把工作当做兴趣爱好
@@ -70,11 +71,6 @@
     * (喜欢和开朗活泼的人相处，喜欢和别人讨论问题，一起解决问题是很开心的事)
 
 ```
-开源项目经历。（一般指 github）
-对自己的项目比较了解
-有那么一两个很熟悉的技术，比如 canvas，node 都是加分项
-对常用的框架源码有一定的了解（使用自己开发的框架，而不是 api 的搬运工）
-有自己的博客（原型链，es6,源码解析，某某开源项目实践）
 /*
 【进阶 1 期】 调用堆栈
 【进阶 2 期】 作用域闭包
@@ -105,5 +101,5 @@
 【进阶 27 期】VueRouter 源码解析
 【进阶 28 期】ReactRouter 源码解析
 */
-有一定的自驱力（学习的毅力，推动团队迭代，分享等）
 ```
+[制作在线简历](https://juejin.im/post/5c0d2622e51d4529ee234272)
