--- a/doc/primary/Es6/e1.md
+++ b/doc/primary/Es6/e1.md
@@ -1,3 +1,39 @@
 ## es6总结
 
-[原文](https://segmentfault.com/a/1190000016068235)
+* [ECMAScript 6 入门](http://es6.ruanyifeng.com/)
+* [原文](https://segmentfault.com/a/1190000016068235)
+
+#### es6快捷环境搭建
+```
+1).npm init
+2).npm i babel-cli babel-preset-es2015 -D
+3).新建.babelrc
+{
+  "presets": [
+    "es2015"
+    ],
+  "plugins": []
+}
+4).package.json快捷命令
+    "run": "babel-node index.js",
+    "build": "babel index.js -o dist/index.js"
+5)新建dist文件夹
+```
+#### es6总结
+```
+var test // 变量提升，函数最顶部
+只要在{}花括号内的代码块即可以认为 let 和 const 的作用域 // TDZ(暂时性死区)
+let 的作用域是在它所在当前代码块，但不会被提升到当前函数的最顶部
+const 声明的变量必须提供一个值，而且会被认为是常量，
+对象所指向的地址不能改变，而变量成员是可以修改的：
+ const student = { name: 'cc' }
+    // 没毛病
+    student.name = 'yy'
+    // 如果这样子就会报错了
+    student  = { name: 'yy' }
+
+ var body = request.body
+ var username = body.username
+ var password = body.password
+const { body, body: { username, password } } = request
+```
