--- a/doc/extend/React/r1.md
+++ b/doc/extend/React/r1.md
@@ -1,3 +1,3 @@
-## JSX深度
+## React
 
-[原文](https://reactjs.org/docs/jsx-in-depth.html#react-must-be-in-scope)
+[JSX深度](https://reactjs.org/docs/jsx-in-depth.html#react-must-be-in-scope)
