--- a/doc/extend/typescript/t1.md
+++ b/doc/extend/typescript/t1.md
@@ -1,3 +1,3 @@
-## TS Eslint规则说明
+## typescript
 
-[原文](https://www.cnblogs.com/minigrasshopper/p/8064218.html)
+[TS Eslint规则说明](https://www.cnblogs.com/minigrasshopper/p/8064218.html)
