--- a/doc/h5/h5基础.md
+++ b/doc/h5/h5基础.md
@@ -7,7 +7,7 @@
 #### meta
 ```js
 //禁止缩放
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 //全屏显示（不显示浏览器底部菜单）
 <meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
