--- a/doc/note/参考链接.md
+++ b/doc/note/参考链接.md
@@ -15,7 +15,7 @@
 * [Google Developers](https://developers.google.com/)
 * [codereview](https://codereview.stackexchange.com/)
 * [stackoverflow](https://stackoverflow.com/)
-* [segmentfault](https://segmentfault.com/)
+* [思否-segmentfault](https://segmentfault.com/)
 * [每日时报](https://wubaiqing.github.io/zaobao/)
 
 ### 技术
