--- a/doc/note/心迹.md
+++ b/doc/note/心迹.md
@@ -48,10 +48,10 @@
 一个真正有价值的程序员不仅需要自身工作能力强，还需要能帮助更多的人使他们增强工作能力。
 ```
 * **会不会花时间和精力去培养公司员工的自身技术和工作能力**
-* **对于过时代码或者临时应急的解决方案你们会不会有一些处理方案**
+* **对于过时代码或者临时应急的解决方案会不会有一些处理方案**
 * **认为代码最重要的是容易被读懂还是使用最新或最优代码**
-* **会不会进行code review**[Why review code?](https://mp.weixin.qq.com/s/5m3bBzFTN82ttEFN5EpBew)
-* **会不会去看开发写的代码（[除了监控进度，还要管理质量](http://blog.jobbole.com/107390/)）**
+* **会不会进行code review**（[Why review code?](https://mp.weixin.qq.com/s/5m3bBzFTN82ttEFN5EpBew)）
+* **会不会去看开发写的代码**（[除了监控进度，还要管理质量](http://blog.jobbole.com/107390/)）
 
 
 * **程序员**：
@@ -102,4 +102,6 @@
 【进阶 28 期】ReactRouter 源码解析
 */
 ```
-[制作在线简历](https://juejin.im/post/5c0d2622e51d4529ee234272)
+```js
+// [制作在线简历](https://juejin.im/post/5c0d2622e51d4529ee234272)
+```
