--- a/doc/note/技术背景.md
+++ b/doc/note/技术背景.md
@@ -2,22 +2,13 @@
 
 #### 前端主流技术
 
-* AngularJS
+* ES6
     ```
-    AngularJS 是一个 JavaScript 框架。它可通过 <script> 标签添加到 HTML 页面。
-    AngularJS 通过 指令 扩展了 HTML，且通过 表达式 绑定数据到 HTML。
-    ```
-* Bootstrap
-    ```
-    组件、LESS 变量和jQuery 插件
+    ES6 是新版本JavaScript语言的标准
     ```
 * jQuery
     ```
     jQuery是一个轻量级的"写的少，做的多"的JavaScript库
-    ```
-* ES6
-    ```
-    ES6 是新版本JavaScript语言的标准
     ```
 * Less、Scss
     ```
@@ -25,7 +16,7 @@
     ```
 * TypeScript
     ```
-    TypeScript是JavaScript的一个超集，而且本质上向这个语言添加了可选的静态类型和基于类的面向对象编程（类型批注、声明文件）。
+    TypeScript是JavaScript的一个超集，本质上向这个语言添加了可选的静态类型和基于类的面向对象编程（类型批注、声明文件）
     ```
 * React
     ```
@@ -43,6 +34,19 @@
     Redux里的store里的state表示Model
     Redux里的action和reducer表示Controller
     ```
+* Vue
+    ```
+    Vue 的目标是通过尽可能简单的 API 实现响应的数据绑定和组合的视图组件。
+    ```
+* AngularJS
+    ```
+    AngularJS 是一个 JavaScript 框架。它可通过 <script> 标签添加到 HTML 页面。
+    AngularJS 通过 指令 扩展了 HTML，且通过 表达式 绑定数据到 HTML。
+    ```
+* Bootstrap
+    ```
+    组件、LESS 变量和jQuery 插件
+    ```
 * Node.js
     ```
     Node.js 就是运行在服务端的 JavaScript。
@@ -53,9 +57,15 @@
     ```
     Express 是一个简洁而灵活的 node.js Web应用框架, 提供了一系列强大特性帮助你创建各种 Web 应用，和丰富的 HTTP 工具。
     ```
-* Vue
+* Axios
     ```
-    Vue 的目标是通过尽可能简单的 API 实现响应的数据绑定和组合的视图组件。
+    支持浏览器和node.js
+    支持promise
+    能拦截请求和响应
+    能转换请求和响应数据
+    能取消请求
+    自动转换JSON数据
+    浏览器端支持防止CSRF(跨站请求伪造)
     ```
 
 #### 前端兼容性
