--- a/doc/note/技术背景.md
+++ b/doc/note/技术背景.md
@@ -2,9 +2,12 @@
 
 #### 前端主流技术
 
-* ES6
+* ES6、ES7、ES8
     ```
     ES6 是新版本JavaScript语言的标准
+    ES6：类、模块化、箭头函数、函数参数默认值、模板字符串、解构赋值、延展操作符、对象属性简写、Promise、支持let与const
+    ES7：Array.prototype.includes()、指数操作符
+    ES8：async/await、Object.values()、Object.entries、String.prototype.padStart和String.prototype.padEnd、函数参数列表结尾允许逗号、Object.getOwnPropertyDescriptors()
     ```
 * jQuery
     ```
