--- a/doc/note/参考链接.md
+++ b/doc/note/参考链接.md
@@ -2,10 +2,13 @@
 
 ### 课程
 
+* [腾讯课堂](https://ke.qq.com/)
+* [网易云课堂](https://study.163.com/)
 * [慕课网](https://www.imooc.com/)
 * [51CTO学院](https://edu.51cto.com/)
 * [驰狼课堂](http://www.chilangedu.com/)
 * [freecodecamp](https://freecodecamp.cn/)
+* [leetcode](https://leetcode.com)
 
 ### 社区
 
@@ -20,6 +23,7 @@
 
 ### 技术
 
+* [w3c](https://www.w3.org)
 * [runoob](http://www.runoob.com/)
 * [MDN Web](https://developer.mozilla.org/zh-CN/docs/Web)
 * [es6](http://es6.ruanyifeng.com/)
@@ -34,4 +38,6 @@
 * [WebRTC](https://webrtc.org/)
 * [highlightjs](https://highlightjs.org/)
 * [chimee](https://chimee.org/)
+* [WebGL-3D-动画-threejs](https://threejs.org/)
+* [typescript](https://www.tslang.cn)
 
