--- a/doc/note/心迹.md
+++ b/doc/note/心迹.md
@@ -102,6 +102,69 @@
 【进阶 28 期】ReactRouter 源码解析
 */
 ```
+* **javascript:8**
+```
+执行上下文、尤其是词法作用域和闭包。
+提升机制、函数与块作用域、以及函数表达式和声明。
+绑定 - 特别是调用、bind、apply 和this关键字。
+对象原型，构造函数和mixins。
+组合函数和高阶函数。
+时间委托和冒泡。
+typeof，instanceof和Object.prototype.toString。
+使用回调，promises，await和async处理异步调用。
+何时使用函数声明和表达式
+```
+//算法+数据结构:6 leetcode
+```
+高时间复杂度和常见运行时（如O(N)和O(N Log N)的基本知识
+```
+//react 新更新:8 redux 原理:8
+//vue-cli 优化
+//webpack:8
+//nodejs:8 enentloop libuv gc v8 koa2 部署 k8s docker serverless
+//linux:8
+//监控工具:8
+//微前端:8 微服务
+//flutter:5
+//http 安全 设计模式
+```
+HTTP请求： GET和POST以及相关标头，如Cache-Control，ETag，Status Codes和Transfer-Encoding。
+REST与RPC。
+安全性：何时使用JSONP，CORs和iFrame策略。
+关键渲染路径。
+Service workers。
+图像优化。
+延迟加载和捆绑拆分。
+HTTP/2和服务器推送的一般含义。
+何时预取和预加载资源。
+减少浏览器重排以及何时将元素渲染交给GPU。
+浏览器布局，合成和绘制之间的差异。
+```
+//前端图形学 three cocos canvas
+```
+框架原理 def的bug
+几种js继承方式
+跨域方式
+前端本地存储 10M以上 离线存储
+css和js动画
+服务端渲染
+css清除浮动
+css权重
+深拷贝简单实现 包含function
+es6常用功能
+```
+```
+说一下对闭包的理解，以及你在什么场景下会用到闭包？
+说一下你对原型与原型链的了解度，有几种方式可以实现继承，用原型实现继承有什么缺点，怎么解决？
+iframe的缺点有哪些？
+Ajax的原生写法
+为什么会有同源策略？
+前端处理跨域有没有遇到过，处理跨域的方式有哪几种方式去解决
+怎么判断两个对象是否相等
+代码实现一个对象的深拷贝
+从发送一个url地址到返回页面，中间发生了什么
+说下工作中你做过的一些性能优化处理
+```
 ```js
 // [制作在线简历](https://juejin.im/post/5c0d2622e51d4529ee234272)
 ```
