--- a/doc/note/技术背景.md
+++ b/doc/note/技术背景.md
@@ -40,6 +40,8 @@
 * Vue
     ```
     Vue 的目标是通过尽可能简单的 API 实现响应的数据绑定和组合的视图组件。
+    vue2.0：Object.defineProperty()，重新定义对象get和set方法
+    vue3.0:Proxy，在目标对象之前架设一层“拦截”，外界对该对象的访问，都必须先通过这层拦截
     ```
 * AngularJS
     ```
