--- a/doc/note/知识扩展.md
+++ b/doc/note/知识扩展.md
@@ -1,140 +1,25 @@
 ## 知识扩展
 
-* [this](#this)
-* [继承与原型链](#继承与原型链)
-* [闭包](#闭包)
-* [变量提升](#变量提升)
-* [事件代理/事件委托](#事件代理/事件委托)
-* [阻止冒泡/浏览器默认行为](#阻止冒泡/浏览器默认行为)
-* [nodeList转换成数组](#nodeList转换成数组)
 * [图片懒加载](#图片懒加载)
 * [服务端渲染（SSR）、客户端渲染（CSR）](#服务端渲染（SSR）、客户端渲染（CSR）)
-* [SEO（搜索引擎）优化](#SEO（搜索引擎）优化)
 * [MVC MVVM](#MVC MVVM)
-* [CDN（内容分发网络）](#CDN（内容分发网络）)
-* [SDK（软件开发工具包）](#SDK（软件开发工具包）)
-* [DNS（域名系统-根据域名查出IP地址）](#DNS（域名系统-根据域名查出IP地址）)
-* [v8](#v8)
-* [webRTC](#webRTC)
 * [跨域/代理](#跨域/代理)
-* [尾调用优化](#尾调用优化)
-* [Service Workers（代替离线缓存Application Cache）](#Service Workers（代替离线缓存Application Cache）)
-* [Web Workers](#Web Workers)
+* [前端优化](#前端优化)
 * [WebSocket](#WebSocket)
-* [深拷贝浅拷贝](#深拷贝浅拷贝)
+* [圣杯模式：继承](#圣杯模式：继承)
+* [客户端存储](#客户端存储)
 
-#### this
-```
-this，函数执行的上下文，可以通过apply，call，bind改变this的指向。
-对于匿名函数或者直接调用的函数来说，this指向全局上下文（浏览器为window，nodejs为global），
-剩下的函数调用，那就是谁调用它，this就指向谁。
-当然还有es6的箭头函数，箭头函数的指向取决于该箭头函数声明的位置，在哪里声明，this就指向哪里。
-var a = {
-    name : "Cherry",
-    func1: function () {
-        console.log(this.name)
-    },
-    func2: function () {
-        setTimeout(  function () {
-            this.func1()
-        },100);
-    },
-    func3: function () {
-        setTimeout( () => {
-            this.func1()
-        },100);
-    },
-    func4: function () {
-        var _this = this;
-        setTimeout( function() {
-            _this.func1()
-        },100);
-    },
-    func5: function () {
-        setTimeout(  function () {
-            this.func1()
-        }.apply(a),100);
-    },
-    func6: function () {
-        setTimeout(  function () {
-            this.func1()
-        }.call(a),100);
-    },
-    func7: function () {
-        setTimeout(  function () {
-            this.func1()
-        }.bind(a)(),100);
-    },
-};
-a.func2()     // this.func1 is not a function
-a.func3()     // Cherry
-a.func4()     // Cherry
-a.func5()     // Cherry
-a.func6()     // Cherry
-a.func7()     // Cherry
-apply 和 call 的区别是 call 方法接受的是若干个参数列表，而 apply 接收的是一个包含多个参数的数组
-bind 接受的是若干个参数列表，是创建一个新的函数，我们必须要手动去调用
-```
-#### 继承与原型链
-[文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Inheritance_and_the_prototype_chain)
-```
-function Person() {
-}
-var person1 = new Person();
-person1.__proto__ === Person.prototype // true
-person1 instanceof Person // true
-Person.prototype.isPrototypeOf(person1) // true
-Object.getPrototypeOf(person1) === Person.prototype // true
-Person.prototype.constructor === Person // true
-person1.constructor === Person  // true
-```
-#### 闭包
-```
-闭包是能够读取其他函数内部变量的函数（定义在函数内部的函数）
-作用：
-1.在外部获取函数体内部的局部变量。
-2.维持函数中的局部变量在内存中不被销毁。
-```
-#### 变量提升
-函数声明和变量声明总是会被解释器悄悄地被"提升"到方法体的最顶部
-```js
-var foo = 1;
-function bar() {
-    //提升 var foo;
-    if (!foo) {
-        var foo = 10;
-    }
-    console.log(foo);    // 10
-}
-bar();
-//
-var a = 1;
-function b() {
-    //提升 function a() {};
-    a = 10;
-    return;
-    function a() {}
-}
-b();
-console.log(a); //1
-```
-#### 事件代理/事件委托
-```
-利用事件冒泡，只指定一个事件处理程序，就可以管理某一类型的所有事件（把事件委托到其父对象上）
-```
-#### 阻止冒泡/浏览器默认行为
-```js
-element.addEventListener(event, function, useCapture) //useCapture:false(冒泡)，true(捕获)
-//仅阻止冒泡
-e.stopPropagation?e.stopPropagation():window.event.cancelBubble = true;
-//仅阻止浏览器默认行为
-e.preventDefault?e.preventDefault():window.event.returnValue=false;
-```
-#### nodeList转换成数组
-```
-Array.from(document.getElementsByTagName('img'));
-Array.prototype.slice.call(document.getElementsByTagName('img'));
-```
+* CDN：内容分发网络
+* SDK：软件开发工具包
+* DNS：域名系统-根据域名查出IP地址
+* v8：Google开发的开源JavaScript引擎
+* webRTC：一项实时通讯技术，它允许网络应用或者站点，在不借助中间媒介的情况下，建立浏览器之间点对点的连接，实现视频流或音频流或者其他任意数据的传输
+* requestAnimationFrame：按帧对网页进行重绘]
+* 语法糖：对语言的功能并没有影响，但是更方便程序员使用。通常来说使用语法糖能够增加程序的可读性，从而减少程序代码出错的机会
+* IIFE：立即执行函数表达式
+* SEO（搜索引擎）优化：是一种透过了解搜索引擎的运作规则来调整网站，以及提高目的网站在有关搜索引擎内排名的方式
+
+
 #### 图片懒加载
 ```
 懒加载是一种对网页性能优化的方式，它的原理是优先加载在可视区域内的图片，而不一次性加载所有图片。
@@ -155,63 +40,46 @@ Array.prototype.slice.call(document.getElementsByTagName('img'));
 2、前后端分离
 3、局部刷新，交互好可实现各种效果
 ```
-#### SEO（搜索引擎）优化
-[文档](https://zh.wikipedia.org/wiki/%E6%90%9C%E5%B0%8B%E5%BC%95%E6%93%8E%E6%9C%80%E4%BD%B3%E5%8C%96)
-```
-是一种透过了解搜索引擎的运作规则来调整网站，以及提高目的网站在有关搜索引擎内排名的方式。
-```
-#### MVC MVVM
+#### MVC MVP MVVM
 ```
 MVC：
     模型：程序员编写程序应有的功能（实现算法等等）、数据库专家进行数据管理和数据库设计(可以实现具体的功能)
     视图：界面设计人员进行图形界面设计
     控制器：负责转发请求，对请求进行处理
+MVP：
+    模型：
+    视图：
+    Presenter：
 MVVM：
     模型：模型是指代表真实状态内容的领域模型（面向对象），或指代表内容的数据访问层（以数据为中心）
     视图：就像在MVC和MVP模式中一样，视图是用户在屏幕上看到的结构、布局和外观（UI）
     视图模型：视图模型是暴露公共属性和命令的视图的抽象。MVVM没有MVC模式的控制器，也没有MVP模式的presenter，有的是一个绑定器。在视图模型中，绑定器在视图和数据绑定器之间进行通信
     绑定器：声明性数据和命令绑定隐含在MVVM模式中。绑定器使开发人员免于被迫编写样板式逻辑来同步视图模型和视图
 ```
-#### CDN（内容分发网络）
-#### SDK（软件开发工具包）
-#### DNS（域名系统-根据域名查出IP地址）
-#### v8
-```
-Google开发的开源JavaScript引擎。
-V8在运行之前将JavaScript编译成了机器代码，而非字节码或是解释执行它，以此提升性能。更进一步，使用了如内联缓存（inline caching）等方法来提高性能。
-有了这些功能，JavaScript程序与V8引擎的速度媲美二进制编译
-```
-#### webRTC
-```
-是一项实时通讯技术，它允许网络应用或者站点，在不借助中间媒介的情况下，建立浏览器之间点对点的连接，实现视频流或音频流或者其他任意数据的传输。
-```
 #### 跨域/代理
-[原文](https://juejin.im/post/5c0e6d606fb9a049f66bf246)
-[原文](http://developer.51cto.com/art/201708/548464.htm)
-#### 尾调用优化
-[文章](http://www.ruanyifeng.com/blog/2015/04/tail-call.html)
-* **前端优化**
+```
+同源策略："协议+域名+端口"三者相同
+允许跨域加载资源：<img src=XXX>、<link href=XXX>、<script src=XXX>、<iframe src=XXX>
+//关闭同源策略：chrome.exe
+jsonp：使用<script>元素作为Ajax传输的技术称为JSONP，利用script标签可跨域的特点，在跨域脚本中可以直接回调当前脚本的函数，JSONP请求一定需要对方的服务器做支持才可以（响应数据是经过JSON编码的）
+cors：服务器设置HTTP响应头中Access-Control-Allow-Origin的值，解除跨域限制
+iframe：postMessage传递数据、window.name 传值、location.hash 传值、设置document.domain（只能用于二级域名相同的情况下）
+websocket：允许跨域通讯
+Node 中间件：代理服务器
+nginx：高性能的HTTP和反向代理服务器，可以顺便修改 cookie 信息
+proxy：webpack配置代理
+```
+#### 前端优化
 ```
 [JavaScript](https://segmentfault.com/a/1190000000490324)
 [DOM操作](https://segmentfault.com/a/1190000000490322)
 [小知识](https://segmentfault.com/a/1190000002588062)
 ```
-#### Service Workers（代替离线缓存Application Cache）
-[文档](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers)
-[文档](https://segmentfault.com/a/1190000017794020)
-```
-离线体验、后台同步、推送通知
-```
-#### Web Workers
-[文档](https://developer.mozilla.org/zh-CN/docs/Web/API/Web_Workers_API/Using_web_workers)
-[文档](http://www.ruanyifeng.com/blog/2018/07/web-worker.html)
-```
-Web Worker 的作用，就是为 JavaScript 创造多线程环境，允许主线程创建 Worker 线程，将一些任务分配给后者运行。
-好处是，一些计算密集型或高延迟的任务，被 Worker 线程负担了，主线程（通常负责 UI 交互）就会很流畅，不会被阻塞或拖慢。
-```
 #### WebSocket
-[文档](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket)
-[文档](http://www.ruanyifeng.com/blog/2017/05/websocket.html)
+* [文档](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket)
+* [文档](http://www.ruanyifeng.com/blog/2017/05/websocket.html)
+* Service Workers：（代替离线缓存Application Cache）离线体验、后台同步、推送通知。
+* Web Workers：为 JavaScript 创造多线程环境，允许主线程创建 Worker 线程，将一些任务分配给后者运行。好处是，一些计算密集型或高延迟的任务，被 Worker 线程负担了，主线程（通常负责 UI 交互）就会很流畅，不会被阻塞或拖慢。
 ```
 一种网络通信协议，服务器可以主动向客户端推送信息，客户端也可以主动向服务器发送信息，是真正的双向平等对话，属于服务器推送技术的一种。
 WebSocket：数据格式比较轻量，性能开销小，通信高效。可以发送文本和二进制数据。没有同源限制。
@@ -254,19 +122,45 @@ wss.on('connection', function(ws) {
     });
 });
 ```
-#### 深拷贝浅拷贝
-[文档](https://juejin.im/post/59ac1c4ef265da248e75892b)
+#### 圣杯模式：继承
 ```
-栈：自动分配的内存空间，它由系统自动释放
-基本数据类型：undefined，boolean，number，string，null
-基本数据类型存放在栈中：存放在栈内存中的简单数据段，数据大小确定，内存空间大小可以分配，是直接按值存放的，所以可以直接访问。
-基本数据类型值不可变
-基本类型的比较是值的比较
-堆：动态分配的内存，大小不定也不会自动释放
-引用数据类型：array，object，function
-引用类型存放在堆中：变量实际上是一个存放在栈内存的指针，这个指针指向堆内存中的地址。每个空间大小不一样，要根据情况开进行特定的分配。
-引用类型值可变
-引用类型的比较是引用的比较
-深拷贝：将 B 对象拷贝到 A 对象中，包括 B 里面的子对象
-浅拷贝：将 B 对象拷贝到 A 对象中，但不包括 B 里面的子对象
+var inherit = (function () {
+    var Buffer = function () {};
+    return function (Target, Origin) {
+        Buffer.prototype = Origin.prototype;
+        Target.prototype = new Buffer();
+        Target.prototype.constructor = Target;
+        Target.prototype.uber = Origin;
+    }
+})();
+
+A.prototype.a = "1";
+function A() {
+    this.a = "0";
+}
+B.prototype.a = "2";
+function B() {
+
+}
+C.prototype.a = "3";
+function C() {
+
+}
+//圣杯模式
+inherit(B, A);
+var b = new B();
+
+C.prototype = A.prototype;
+var c = new C();
+
+C.prototype = new A();
+var d = new C();
+```
+#### 客户端存储
+```
+cookie（4KB）：服务端脚本可以读写存储在客户端的cookie值，（有效期：默认-浏览器进程关闭之前，max-age设置有效期时长秒，作用域：默认-同目录或其子目录，path指定路径前缀，domain指定域）
+Web存储（5MB、2.5MB）：localStorage（有效期：永久性，作用域：同浏览器同源文档共享）、sessionStorage（有效期：浏览器页面关闭之前-可恢复，作用域：顶级窗口共享）
+应用程序存储：AppCache：“本地安装”程序运行所需的所有文件，同步机制自动更新缓存最新数据
+Servers Work:
+客户端数据库：IndexedDB：对象数据库（同源页面共享）
 ```
