--- a/doc/h5/h5基础.md
+++ b/doc/h5/h5基础.md
@@ -9,9 +9,15 @@
 //禁止缩放
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 //全屏显示（不显示浏览器底部菜单）
-<meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
-<meta name="x5-fullscreen" content="true">
+<meta name="x5-fullscreen" content="true">//
+//禁用自动识别页面中的电话号码
+<meta name="format-detection" content="telephone=no">
+//顶部状态栏背景色
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+//不使用缓存
+<meta http-equiv="Cache-Control" content="no-cache" />
 ```
