--- a/doc/note/学习链接.md
+++ b/doc/note/学习链接.md
@@ -1,4 +1,4 @@
-## 参考链接
+## 学习链接
 
 ### 课程
 
@@ -12,6 +12,8 @@
 
 ### 社区
 
+* [淘宝前端团队FED](http://taobaofed.org/)
+* [极客教程](https://www.geekjc.com/)
 * [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
 * [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 * [伯乐在线](http://web.jobbole.com/)
@@ -40,4 +42,5 @@
 * [chimee](https://chimee.org/)
 * [WebGL-3D-动画-threejs](https://threejs.org/)
 * [typescript](https://www.tslang.cn)
+* [前端资料](https://shimo.im/docs/VXEZSWMLxlw4XB2M/read)
 
