--- a/doc/note/心迹.md
+++ b/doc/note/心迹.md
@@ -40,131 +40,31 @@
 倘若硬要去做那些没兴趣的事情，不仅内心煎熬，而且投入大量时间和金钱之后，最终还是难逃认赔离场的结局。
 ```
 
-####记录
-
-* **自己的价值由自己决定**
+* **拥有影响和塑造未来的新兴技能**
 ```
-因为你认为自身的价值提升了，所以才会去接受更高级的考核。
-一个真正有价值的程序员不仅需要自身工作能力强，还需要能帮助更多的人使他们增强工作能力。
+技术的未来发展，是我们可以去发出声音，去影响，乃至于去引领的。【为什么要关心标准（ES6）】
 ```
-* **会不会花时间和精力去培养公司员工的自身技术和工作能力**
-* **对于过时代码或者临时应急的解决方案会不会有一些处理方案**
-* **认为代码最重要的是容易被读懂还是使用最新或最优代码**
-* **会不会进行code review**（[Why review code?](https://mp.weixin.qq.com/s/5m3bBzFTN82ttEFN5EpBew)）
-* **会不会去看开发写的代码**（[除了监控进度，还要管理质量](http://blog.jobbole.com/107390/)）
 
-
+===========================================================================
 * **程序员**：
-    * 不做github的搬运工，要自己创造代码（使用自己开发的框架，而不是 api 的搬运工）
-    * 需要学习的是编程，而不是编程语言
-    * 有一定的自驱力（学习的毅力，推动团队迭代，分享等）
+    * 需要学习的是编程思想，而不是编程语言
+    * 不做github的搬运工，要自己创造代码（使用自己开发的框架，而不是 api 的使用者）
+    * 学习的毅力，推动团队进步，乐于分享
+    * 一个真正有价值的程序员不仅需要自身工作能力强，还需要能帮助伙伴使团队增强工作能力
 * **工作**：
-    * 必须完成的事会有压力，想要完成的事才有动力
-    * 必须要保持对工作的热情，而不一定是把工作当做兴趣爱好
-* **公司**：
-    * 有进步发展空间，在一个良好的工作环境中养成良好的工作习惯
     * 专注于技术的研究和能力的提升，与项目团队一起进步
+    * 必须完成的事会有压力，想要完成的事才有动力
+    * 兴趣支撑不起工作，责任感才能让人保持对工作的热情
+    * 比起写，代码更多地是给人看的
+* **公司**：
+    * 有进步发展空间，在一个良好的工作环境中让人养成良好的工作习惯
+    * 花时间和精力去培养公司员工的自身技术和工作能力
+    * 对于过时代码或者临时应急的解决方案后期会有一些处理方案
+    * 进行code review，除了监控进度，还要管理代码质量
 * **特点**：
-    * 专注于自己认定的事，敢于做自己从未做过的事
+    * 做自己想做的事，做影响未来的事
     * 认真做简单的事，尝试做困难的事
     * 想奋斗是不服输，想安稳是输不起
     * (喜欢和开朗活泼的人相处，喜欢和别人讨论问题，一起解决问题是很开心的事)
 
-```
-/*
-【进阶 1 期】 调用堆栈
-【进阶 2 期】 作用域闭包
-【进阶 3 期】 this 全面解析
-【进阶 4 期】 深浅拷贝原理
-【进阶 5 期】 原型 Prototype
-【进阶 6 期】 高阶函数
-【进阶 7 期】 事件机制
-【进阶 8 期】 Event Loop 原理
-【进阶 9 期】 Promise 原理
-【进阶 10 期】Async/Await 原理
-【进阶 11 期】防抖/节流原理
-【进阶 12 期】模块化详解
-【进阶 13 期】ES6 重难点
-【进阶 14 期】计算机网络概述
-【进阶 15 期】浏览器渲染原理
-【进阶 16 期】webpack 配置
-【进阶 17 期】webpack 原理
-【进阶 18 期】前端监控
-【进阶 19 期】跨域和安全
-【进阶 20 期】性能优化
-【进阶 21 期】VirtualDom 原理
-【进阶 22 期】Diff 算法
-【进阶 23 期】MVVM 双向绑定
-【进阶 24 期】Vuex 原理
-【进阶 25 期】Redux 原理
-【进阶 26 期】路由原理
-【进阶 27 期】VueRouter 源码解析
-【进阶 28 期】ReactRouter 源码解析
-*/
-```
-* **javascript:8**
-```
-执行上下文、尤其是词法作用域和闭包。
-提升机制、函数与块作用域、以及函数表达式和声明。
-绑定 - 特别是调用、bind、apply 和this关键字。
-对象原型，构造函数和mixins。
-组合函数和高阶函数。
-时间委托和冒泡。
-typeof，instanceof和Object.prototype.toString。
-使用回调，promises，await和async处理异步调用。
-何时使用函数声明和表达式
-```
-//算法+数据结构:6 leetcode
-```
-高时间复杂度和常见运行时（如O(N)和O(N Log N)的基本知识
-```
-//react 新更新:8 redux 原理:8
-//vue-cli 优化
-//webpack:8
-//nodejs:8 enentloop libuv gc v8 koa2 部署 k8s docker serverless
-//linux:8
-//监控工具:8
-//微前端:8 微服务
-//flutter:5
-//http 安全 设计模式
-```
-HTTP请求： GET和POST以及相关标头，如Cache-Control，ETag，Status Codes和Transfer-Encoding。
-REST与RPC。
-安全性：何时使用JSONP，CORs和iFrame策略。
-关键渲染路径。
-Service workers。
-图像优化。
-延迟加载和捆绑拆分。
-HTTP/2和服务器推送的一般含义。
-何时预取和预加载资源。
-减少浏览器重排以及何时将元素渲染交给GPU。
-浏览器布局，合成和绘制之间的差异。
-```
-//前端图形学 three cocos canvas
-```
-框架原理 def的bug
-几种js继承方式
-跨域方式
-前端本地存储 10M以上 离线存储
-css和js动画
-服务端渲染
-css清除浮动
-css权重
-深拷贝简单实现 包含function
-es6常用功能
-```
-```
-说一下对闭包的理解，以及你在什么场景下会用到闭包？
-说一下你对原型与原型链的了解度，有几种方式可以实现继承，用原型实现继承有什么缺点，怎么解决？
-iframe的缺点有哪些？
-Ajax的原生写法
-为什么会有同源策略？
-前端处理跨域有没有遇到过，处理跨域的方式有哪几种方式去解决
-怎么判断两个对象是否相等
-代码实现一个对象的深拷贝
-从发送一个url地址到返回页面，中间发生了什么
-说下工作中你做过的一些性能优化处理
-```
-```js
-// [制作在线简历](https://juejin.im/post/5c0d2622e51d4529ee234272)
-```
+
