--- a/doc/note/知识扩展.md
+++ b/doc/note/知识扩展.md
@@ -13,11 +13,15 @@
     * **Vuex**：一个专为 Vue.js 应用程序开发的状态管理模式。采用集中式存储管理应用的所有组件的状态，并以相应的规则保证状态以一种可预测的方式发生变化
     * **Element**：基于Vue 2.0的桌面端组件库
     * **Node.js**：是一个基于 Chrome V8 引擎的 JavaScript 运行环境，使用了一个事件驱动、非阻塞式 I/O 的模型，使其轻量又高效
+    * **Webpack**：现代 JavaScript 应用程序的静态模块打包器
     * **Express**：是一个简洁而灵活的 node.js Web应用框架, 提供了一系列强大特性帮助你创建各种 Web 应用、移动应用、丰富的 HTTP 工具
     * **Fetch**：足够取代 XHR ，并且提供了更多拓展的可能性
     * **Axios**：是一个基于promise的HTTP库，可以用在浏览器和node.js中。支持取消请求、自动转换JSON数据、客户端支持防御XSRF
     * **WebSocket**：一种网络通信协议，数据格式比较轻量，性能开销小，通信高效。可以发送文本和二进制数据。没有同源限制。属于服务器推送技术的一种
     * **Electron**：构建跨平台桌面应用程序的一个开源库
+    * **Git**：分布式版本控制系统，旨在快速高效地处理从小型到大型项目的所有事务
+    * **Svn**：版本控制系统，采用了分支管理系统
+    * **Web Components**：创建可重用的定制元素（Custom elements（自定义元素）、Shadow DOM（影子DOM）、HTML templates（HTML模板）、HTML Imports（HTML导入））
 
 * 扩展
     * **浏览器内核**：IE:Trident、Safari:WebKit、Chrome:Chromium/WebKit、Opera:Blink/WebKit、Firefox:Gecko
@@ -43,14 +47,19 @@
     * **RxJs**：是一个库，它通过使用observable 序列来编写异步和基于事件的程序
     * **Web Workers**：为 JavaScript 创造多线程环境，允许主线程创建 Worker 线程，将一些任务分配给后者运行
     * **Service Workers**：（代替离线缓存Application Cache）离线体验、后台同步、推送通知
-    * **Web Components**：提供一整套完善的封装机制来把 Web 组件化这个东西标准化，每个框架实现的组件都统一标准地进行输入输出，这样可以更好推动组件的复用
+    * **微信小程序**：提供了一个简单、高效的应用开发框架和丰富的组件及API，帮助开发者在微信中开发具有原生 APP 体验的服务
 
 * 进阶
     * 用户体验：性能优化策略、浏览器渲染原理、js引擎工作原理、交互的基本原则、浏览器http缓存的相关利用、用户操作容错率
     * ES6（用ES5实现ES6）、TypeScript、Linux命令
     * 服务端：NodeJS（上线部署、压力测试、微服务）、Nginx
-    * 框架：React、Vue、AngulaJS、三大框架SSR原理与传统SSR对比、微前端架构设计、数据状态管理框架（Redux、Vuex）
+    * 框架：React、Vue、AngulaJS、三大框架SSR原理与传统SSR对比（node中间层，nuxt，next）、微前端架构设计、数据状态管理框架（Redux、Vuex）
     * 移动端：ReactNative、Flutter、Electron
     * 工程化：Webpack（配置、核心原理、开发优化）、Eslint、gulp、npm、yarn、编写性能与容错线上监控平台
-    * 扩展：数据结构、算法、图形学（Canvas、Three.js）、设计模式、网络安全
+    * 设计模式:
+    * 网络安全:
+    * 前端图形学：three cocos canvas
+    * Serverless（无服务器架构）
+    * 算法+数据结构：高时间复杂度和常见运行时（如O(N)和O(N Log N)的基本知识 冒泡排序、快速排序
+    * 监控工具
 
