--- a/doc/note/备忘录.md
+++ b/doc/note/备忘录.md
@@ -28,8 +28,9 @@
     * 不是为了生存，而是为了发展
     * 个人职业发展，大公司自带光环（优秀的技术沉淀和管理制度），小公司成长快
 
-性别 工作经历合并 描述20不好 xx平台里的聊天室 不知道换成自己的理解
+性别 工作经历合并 描述20不好 xx平台里的聊天室
 不做架子工 修改组件库 路由懒加载 游戏预加载
+不知道换成自己的理解 如果以后的工作有需要会很快的去深入学习 这是我的理解，你的更深层次理解？学习到了，其他的问题？
 
 ===========================================================================
 * **web**：
@@ -256,6 +257,12 @@
     ```
     * **原型继承**：
     ```
+    javascript面向对象实现：通过构造器函数创建实例对象来实现封装、通过原型和原型链来实现继承
+    javascript在面向对象中函数的作用：功能函数（封装一块代码逻辑，便于重复调用，创建临时的内存空间）、构造器函数（创建实例对象，开辟新的内存空间）
+    javascript的原型和原型链是什么：每个实例对象（ object ）都有一个私有属性（ _proto_）指向它的构造函数的原型对象（prototype）。该原型对象也有一个自己的原型对象( _proto_) ，层层向上直到一个对象的原型对象为 null
+        _proto_：object的原型
+        prototype：function构造器的原型
+        constructor：object的类别
     有几种方式可以实现继承，用原型实现继承有什么缺点，怎么解决：
         构造函数绑定：引用属性不共享，可以传参，可以多继承。不能继承父类原型属性和方法，无法实现函数复用
             function Son(name){
@@ -323,6 +330,7 @@
         总结this指向：谁调用它，this就指向谁
     闭包的实现原理和作用，可以列举几个开发中闭包的实际应用：
         闭包：有权访问另一个函数作用域中的变量的函数（内部函数被保存到外部）
+        闭包是指的什么：通过函数调用，内外都持有数据的访问权，导致里面的块独立的内存空间永远存在且对外是封闭的，所以称为闭包
         作用：
             1.在外部获取函数体内部的局部变量
             2.维持函数中的局部变量在内存中不被销毁，可能造成内存泄漏
@@ -331,6 +339,8 @@
     ```
     * **模块化**：
     ```
+    前端工程化：拆分模块、自动化工具（webpack、npm）、团队协作（git、svn）
+    前端模块化：commonjs（nodejs的模块化规范：require|module.exports）、AMD/CMD/UMD（es6之前js的模块化规范）、ES6 Module（import|export）
     如何在浏览器中使用原生ES模块方案：在script标签上添加type="module"属性
     解决的实际问题：全局变量污染、函数命名冲突、依赖关系不好管理
     javascript模块化方案：
@@ -349,10 +359,10 @@
     ```
     为何try里面放return，finally还会执行，理解其内部机制：
         先执行finally，再执行return，若finally里有return则不执行try里的return
-    JavaScript如何实现异步编程，可以详细描述EventLoop机制：当一个任务执行结束后，当当前的微任务队列为空时，再去执行宏任务队列中的任务
+    JavaScript如何实现异步编程，可以详细描述EventLoop机制：挂起异步操作，执行同步任务（当一个任务执行结束后，当当前的微任务队列为空时，再去执行宏任务队列中的任务），执行异步任务
     宏任务和微任务分别有哪些：
-        宏任务：setTimeout、setInterval、click、渲染html文档
-        微任务：promise、MutationObserver
+        宏任务：new Promise、异步任务（setTimeout、setInterval）、click、渲染html文档
+        微任务：promise.then、catch、finally、MutationObserver
     Node与浏览器EventLoop的差异：将不同的任务分配给不同的线程，形成一个事件循环，以异步的方式将任务的执行结果返回给V8引擎
     如何在保证页面运行流畅的情况下处理海量数据：利用setTimeout将任务放入事件队列,等待js引擎空闲后被执行
     ```
@@ -407,7 +417,7 @@
     ```
     * **异步编程的解决方案**：
     ```
-    1）回调函数：回调地狱
+    1）回调函数：回调地狱，不利于阅读
     2）Promise：使用.then方法解决了回调的问题，但代码依然冗余，且语义不强
     3）Generator：yield暂停执行，看起来非常像同步的写法，需要手动.next来执行下一个操作
     4）async：内置执行器，更好的语义（async代表异步，await代表等待），返回的是Promise
@@ -432,7 +442,7 @@
     生命周期方法：constructor()、static getDerivedStateFromProps()、shouldComponentUpdate()、render()、componentDidMount()、getSnapshotBeforeUpdate()、componentDidUpdate()、componentWillUnmount()
         React16废弃：componentWillMount、componentWillReceiveProps、componentWillUpdate
     高阶组件（HOC）：参数为组件，返回值为新组件的纯函数
-    refs：Refs 转发、回调 Refs
+    refs：React.createRef()、回调 Refs、Refs 转发（React.forwardRef）
     render Props：
     Hook：在不编写 class 的情况下使用 state 以及其他的 React 特性（无状态组件变成函数组件）
         useState：在函数组件中添加 state
@@ -521,6 +531,7 @@
     ```
     * **Vue双向绑定实现原理、Diff算法的内部实现**：
     ```
+    MVVM双向数据绑定：Object.definePrototype()监控对象的属性（可配置、可枚举、数据描述符：value|writable、存取描述符：get|set）
     ```
     * **Vue的事件机制**：
     ```
@@ -540,9 +551,11 @@
     * **Vue3 proxy 解决了哪些问题，优劣**：
     ```
     1）Object.defineProperty的性能开销
-    2）defineReactive一开始就要对要监听的对象所有属性都执行一遍，因为传统方法要将一个对象转换成可监听对象，只能如此
-    3）添加删除属性的问题
-    4）新版本将这个模块被耦合到了vue里面，可以单独作为一个库来使用
+    2）defineProperty只能劫持对象的属性,因此我们需要对每个对象的每个属性进行遍历,proxy能劫持一个完整的对象
+    3）能够监听添加删除属性事件
+    4）新版本将这个模块耦合到了vue里面，可以单独作为一个库来使用
+    劣：
+    1）只会关注浅层数据
     ```
     * **发布订阅模式和观察者模式的异同**：
     ```
@@ -558,6 +571,7 @@
     v8引擎内存优化：
         垃圾回收算法：新生代复制（空间换时间），老生代标记删除整理（时间换空间）
         node查看内存使用情况：process.memoryUsage()
+    前端查询：http请求的数量、合适的加载策略（懒加载|预加载）、合适的缓存机制
     ```
     * **quicklink fcp fmp**：
     ```
