--- a/doc/note/学习链接.md
+++ b/doc/note/学习链接.md
@@ -12,16 +12,18 @@
 
 ### 社区
 
+* [前端开发博客](http://caibaojian.com/)
+* [牛客网](https://www.nowcoder.com)
 * [淘宝前端团队FED](http://taobaofed.org/)
 * [极客教程](https://www.geekjc.com/)
-* [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
-* [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 * [伯乐在线](http://web.jobbole.com/)
 * [Google Developers](https://developers.google.com/)
 * [codereview](https://codereview.stackexchange.com/)
 * [stackoverflow](https://stackoverflow.com/)
 * [思否-segmentfault](https://segmentfault.com/)
 * [每日时报](https://wubaiqing.github.io/zaobao/)
+* [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
+* [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 
 ### 技术
 
