--- a/doc/note/知识扩展.md
+++ b/doc/note/知识扩展.md
@@ -24,6 +24,7 @@
     * **Web Components**：创建可重用的定制元素（Custom elements（自定义元素）、Shadow DOM（影子DOM）、HTML templates（HTML模板）、HTML Imports（HTML导入））
 
 * 扩展
+    * **MVVM框架**：Model（数据：Javascript对象），View（视图：DOM），ViewModel（通讯：观察者）
     * **浏览器内核**：IE:Trident、Safari:WebKit、Chrome:Chromium/WebKit、Opera:Blink/WebKit、Firefox:Gecko
     * **JS引擎**：Chrome:V8
     * **CDN**：内容分发网络
