--- a/doc/note/知识扩展.md
+++ b/doc/note/知识扩展.md
@@ -36,6 +36,7 @@
     * **IIFE**：立即执行函数表达式
     * **ajax轮询**：让浏览器隔个几秒就发送一次请求，询问服务器是否有新信息
     * **long poll**：采取的是阻塞模型。客户端发起连接后，如果没消息，就一直不返回Response给客户端。直到有消息才返回，返回完之后，客户端再次建立连接，周而复始
+    * **PWA**：渐进式webapp（Manifest实现添加至主屏幕、service worker实现离线缓存和消息推送）
 
 * 计划
     * **ReactNative**：只使用JavaScript也能编写原生移动应用
